--- a/src/components/Index/index.css
+++ b/src/components/Index/index.css
@@ -1,14 +1,7 @@
-h1, h2 {
-  font-weight: normal;
+.md-list-item-container {
+    color: black;
 }
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-li {
-  display: inline-block;
-  margin: 0 10px;
-}
-a {
-  color: #42b983;
+
+.session-item {
+  background: #FFFFFF;
 }
