--- a/src/components/Index/index.css
+++ b/src/components/Index/index.css
@@ -1,7 +1,20 @@
-.md-list-item-container {
-    color: black;
-}
+ .md-list-item-text {
+     padding-top: 1em;
+     padding-bottom: 1em;
+  }
 
-.session-item {
-  background: #FFFFFF;
-}
+ .md-list {
+     width: 40em;
+     max-width: 100%;
+     display: inline-block;
+     vertical-align: top;
+     border: 1px solid rgba(#000, .12);
+ }
+
+ .list-title {
+     margin-bottom: 10px;
+ }
+
+ .list-subtitle {
+     margin-bottom: 8px;
+ }
